<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/redLight"
    tools:context=".Popup.InfoOwnerPopup"
    android:layout_centerInParent="true"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        android:background="@color/redLight"
        tools:context=".Popup.InfoOwnerPopup">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/infoOwner"
            android:textSize="25sp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/textAddButton"
            android:textSize="20sp"
            />

        <ImageView
            android:layout_width="70dp"
            android:layout_height="65dp"
            android:layout_marginTop="15dp"
            android:background="@color/black"
            android:src="@drawable/add_button"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:textSize="20sp"
            android:text="@string/textDeleteButton"
            />

        <ImageView
            android:layout_width="146dp"
            android:layout_height="70dp"
            android:layout_marginTop="15dp"
            android:background="@color/black"
            android:src="@drawable/delete_button"
            android:layout_gravity="center"/>

    </LinearLayout>
</ScrollView>