<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/home_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <View
        android:id="@+id/BackgroundToolbar"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/redDark"
        app:layout_constraintBottom_toBottomOf="@id/glToolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/ButtonHome"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="20sp"
        android:backgroundTint="@color/redDark"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_baseline_home_24"
        app:layout_constraintBottom_toBottomOf="@+id/nameCard"
        app:layout_constraintEnd_toStartOf="@+id/nameCard"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/nameCard"
        tools:ignore="ContentDescription" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glImageTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.02" />

    <androidx.cardview.widget.CardView
        android:id="@+id/nameCard"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="10dp"
        android:background="@color/black"
        android:maxWidth="150dp"
        android:paddingVertical="10dp"
        app:cardCornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="@id/glImageBottom"
        app:layout_constraintEnd_toStartOf="@id/ButtonCart"
        app:layout_constraintStart_toEndOf="@id/ButtonHome"
        app:layout_constraintTop_toTopOf="@id/glImageTop">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/black"
            android:scaleType="centerInside"
            android:src="@drawable/name"
            tools:ignore="ContentDescription" />

    </androidx.cardview.widget.CardView>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glImageBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1" />

    <ImageButton
        android:id="@+id/ButtonCart"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="@color/redDark"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_baseline_shopping_cart_24"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/nameCard"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintStart_toEndOf="@+id/nameCard"
        app:layout_constraintTop_toTopOf="@+id/nameCard"
        tools:ignore="ContentDescription" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glToolbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.12" />

    <TextView
        android:id="@+id/cartTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/bahnschrift"
        android:paddingEnd="10dp"
        android:text="@string/cart"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@id/line1"
        app:layout_constraintEnd_toStartOf="@id/ButtonEmptyCart"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/glToolbar"
        tools:ignore="RtlSymmetry" />

    <Button
        android:id="@+id/ButtonEmptyCart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:backgroundTint="@color/redDark"
        android:fontFamily="@font/bahnschrift"
        android:text="@string/empty"
        app:layout_constraintBottom_toBottomOf="@id/cartTV"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/cartTV"
        app:layout_constraintTop_toTopOf="@id/cartTV" />

    <View
        android:id="@+id/line1"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="5dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cartTV" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintBottom_toTopOf="@id/line2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/line1" />

    <TextView
        android:id="@+id/deletedArticlesTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:fontFamily="@font/bahnschrift"
        android:text="@string/deletedArticles"
        android:textSize="20sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/recyclerView"
        app:layout_constraintEnd_toEndOf="@+id/recyclerView"
        app:layout_constraintStart_toStartOf="@+id/recyclerView"
        app:layout_constraintTop_toTopOf="@+id/recyclerView" />

    <View
        android:id="@+id/line2"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="5dp"
        android:layout_marginTop="5dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintBottom_toTopOf="@+id/totalTV"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/totalTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginStart="25dp"
        android:fontFamily="@font/bahnschrift"
        android:text="@string/total"
        android:textColor="@color/blackLight"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/ButtonFinishOrder"
        app:layout_constraintEnd_toStartOf="@id/mountTV"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.97" />

    <TextView
        android:id="@+id/mountTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="25dp"
        android:fontFamily="@font/bahnschrift"
        android:textColor="@color/blackLight"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@id/totalTV"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/totalTV"
        app:layout_constraintTop_toTopOf="@id/totalTV" />

    <Button
        android:id="@+id/ButtonFinishOrder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/redDark"
        android:drawableEnd="@drawable/ic_baseline_shopping_cart_checkout_24"
        android:enabled="true"
        android:fontFamily="@font/bahnschrift"
        android:text="@string/finish"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.95" />

</androidx.constraintlayout.widget.ConstraintLayout>









