<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/uploadArticle_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <View
        android:id="@+id/BackgroundToolbar"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/redDark"
        app:layout_constraintBottom_toBottomOf="@id/glToolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/ButtonHome"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="20sp"
        android:backgroundTint="@color/redDark"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_baseline_home_24"
        app:layout_constraintBottom_toBottomOf="@+id/nameCard"
        app:layout_constraintEnd_toStartOf="@+id/nameCard"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/nameCard"
        tools:ignore="ContentDescription" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glImageTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.02" />

    <androidx.cardview.widget.CardView
        android:id="@+id/nameCard"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="10dp"
        android:background="@color/black"
        android:maxWidth="150dp"
        android:paddingVertical="10dp"
        app:cardCornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="@id/glImageBottom"
        app:layout_constraintEnd_toStartOf="@id/ButtonCart"
        app:layout_constraintStart_toEndOf="@id/ButtonHome"
        app:layout_constraintTop_toTopOf="@id/glImageTop">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/black"
            android:scaleType="centerInside"
            android:src="@drawable/name"
            tools:ignore="ContentDescription" />

    </androidx.cardview.widget.CardView>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glImageBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1" />

    <ImageButton
        android:id="@+id/ButtonCart"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="@color/redDark"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_baseline_shopping_cart_24"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/nameCard"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintStart_toEndOf="@+id/nameCard"
        app:layout_constraintTop_toTopOf="@+id/nameCard"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/amountInCartTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/bahnschrift"
        android:textColor="@color/redLight"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/ButtonCart"
        app:layout_constraintEnd_toEndOf="@id/ButtonCart"
        app:layout_constraintHorizontal_bias="0.9"
        app:layout_constraintStart_toStartOf="@id/ButtonCart"
        app:layout_constraintTop_toTopOf="@id/ButtonCart"
        app:layout_constraintVertical_bias="0" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glToolbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.12" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />

    <TextView
        android:id="@+id/uploadArticleTV"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/bahnschrift"
        android:text="@string/uploadNewArticle"
        android:textAlignment="center"
        android:textColor="@color/redDark"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/glEnd"
        app:layout_constraintStart_toStartOf="@id/glStart"
        app:layout_constraintTop_toBottomOf="@id/glToolbar"
        app:layout_constraintVertical_bias="0.02" />


    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        app:layout_constraintEnd_toEndOf="@id/glEnd"
        app:layout_constraintStart_toStartOf="@id/glStart"
        app:layout_constraintTop_toBottomOf="@+id/uploadArticleTV">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/urlLl"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintBottom_toTopOf="@id/nameLl"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="parent"
                app:layout_constraintVertical_chainStyle="packed">

                <TextView
                    android:id="@+id/urlTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/bahnschrift"
                    android:text="Url de la imágen"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/urlET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="5dp"
                    android:fontFamily="@font/bahnschrift"
                    tools:ignore="Autofill,RtlSymmetry,TextFields" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/nameLl"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintBottom_toTopOf="@id/priceLl"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/urlLl">

                <TextView
                    android:id="@+id/nameTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/bahnschrift"
                    android:text="@string/nameUpload"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/nameET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="5dp"
                    android:fontFamily="@font/bahnschrift"
                    tools:ignore="Autofill,RtlSymmetry,TextFields" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/priceLl"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintBottom_toTopOf="@id/descriptionLl"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/nameLl">

                <TextView
                    android:id="@+id/priceTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/bahnschrift"
                    android:inputType="numberDecimal"
                    android:text="@string/priceUpload"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/priceET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="5dp"
                    android:fontFamily="@font/bahnschrift"
                    android:inputType="numberDecimal"
                    tools:ignore="Autofill,RtlSymmetry,TextFields" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/descriptionLl"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintBottom_toTopOf="@id/categorieSelector"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/priceLl">

                <TextView
                    android:id="@+id/descriptionTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/bahnschrift"
                    android:text="@string/descriptionUpload"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/descriptionET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="5dp"
                    android:fontFamily="@font/bahnschrift"
                    tools:ignore="Autofill,RtlSymmetry,TextFields" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/categorieSelector"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/descriptionLl">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/desplegable"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="5dp"
                    android:hint="@string/selectCategorie"
                    android:fontFamily="@font/bahnschrift"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">

                    <AutoCompleteTextView
                        android:id="@+id/auto_complete_txt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="none"/>

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <Button
        android:id="@+id/ButtonUpload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/redDark"
        android:fontFamily="@font/bahnschrift"
        android:text="@string/buttonUpload"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/glToolbar"
        app:layout_constraintVertical_bias="0.95" />

</androidx.constraintlayout.widget.ConstraintLayout>